small reference changes

--- a/Hangman/HangmanServer/App.config
+++ b/Hangman/HangmanServer/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <system.serviceModel>
+    <services>
+      <service name="HangmanServer.Server">        
+        <endpoint address="HangmanServer/" binding="wsDualHttpBinding" contract="HangmanContract.IPortal"/>
+        <endpoint address="IBackoffice/" binding="wsDualHttpBinding" contract="HangmanContract.IGamePlay"/>
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/" />
+          </baseAddresses>
+        </host>        
+      </service>
+    </services>    
+    <behaviors>
+      <serviceBehaviors>
+        <behavior>
+          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
+          <serviceDebug includeExceptionDetailInFaults="False" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+  </system.serviceModel>
 </configuration>
