--- a/Hangman/HangmanClient/App.config
+++ b/Hangman/HangmanClient/App.config
@@ -3,4 +3,28 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <wsDualHttpBinding>
+                <binding name="WSDualHttpBinding_IPortal" />
+                <binding name="WSDualHttpBinding_IGamePlay" />
+            </wsDualHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:8733/HangmanServer/" binding="wsDualHttpBinding"
+                bindingConfiguration="WSDualHttpBinding_IPortal" contract="HangmanContract.IPortal"
+                name="WSDualHttpBinding_IPortal">
+                <identity>
+                    <userPrincipalName value="STEFANO-PC\stefano" />
+                </identity>
+            </endpoint>
+            <endpoint address="http://localhost:8733/IBackoffice/" binding="wsDualHttpBinding"
+                bindingConfiguration="WSDualHttpBinding_IGamePlay" contract="HangmanContract.IGamePlay"
+                name="WSDualHttpBinding_IGamePlay">
+                <identity>
+                    <userPrincipalName value="STEFANO-PC\stefano" />
+                </identity>
+            </endpoint>
+        </client>
+    </system.serviceModel>
 </configuration>
