--- a/Hangman/HangmanClient/App.config
+++ b/Hangman/HangmanClient/App.config
@@ -6,21 +6,13 @@
     <system.serviceModel>
         <bindings>
             <wsDualHttpBinding>
-                <binding name="WSDualHttpBinding_IPortal" />
-                <binding name="WSDualHttpBinding_IGamePlay" />
+                <binding name="WSDualHttpBinding_IHangman" />
             </wsDualHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:8733/HangmanServer/" binding="wsDualHttpBinding"
-                bindingConfiguration="WSDualHttpBinding_IPortal" contract="HangmanContract.IPortal"
-                name="WSDualHttpBinding_IPortal">
-                <identity>
-                    <userPrincipalName value="STEFANO-PC\stefano" />
-                </identity>
-            </endpoint>
-            <endpoint address="http://localhost:8733/IBackoffice/" binding="wsDualHttpBinding"
-                bindingConfiguration="WSDualHttpBinding_IGamePlay" contract="HangmanContract.IGamePlay"
-                name="WSDualHttpBinding_IGamePlay">
+                bindingConfiguration="WSDualHttpBinding_IHangman" contract="HangmanContract.IHangman"
+                name="WSDualHttpBinding_IHangman">
                 <identity>
                     <userPrincipalName value="STEFANO-PC\stefano" />
                 </identity>
