--- a/Hangman/HangmanContract/HangmanContract.csproj
+++ b/Hangman/HangmanContract/HangmanContract.csproj
@@ -41,9 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IGamePlay.cs" />
-    <Compile Include="IPlayer.cs" />
-    <Compile Include="IPortal.cs" />
+    <Compile Include="IHangman.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
