--- a/Hangman/HangmanServer/App.config
+++ b/Hangman/HangmanServer/App.config
@@ -2,14 +2,13 @@
 <configuration>
   <system.serviceModel>
     <services>
-      <service name="HangmanServer.Server">        
-        <endpoint address="HangmanServer/" binding="wsDualHttpBinding" contract="HangmanContract.IPortal"/>
-        <endpoint address="IBackoffice/" binding="wsDualHttpBinding" contract="HangmanContract.IGamePlay"/>
+      <service name="HangmanServer.Server">
+        <endpoint address="HangmanServer/" binding="wsDualHttpBinding" contract="HangmanContract.IHangman" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8733/" />
           </baseAddresses>
-        </host>        
+        </host>
       </service>
     </services>    
     <behaviors>
