--- a/Hangman/HangmanServer/HangmanServer.csproj
+++ b/Hangman/HangmanServer/HangmanServer.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Game.cs" />
+    <Compile Include="Invitation.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="ServerForm.cs">
@@ -55,7 +57,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
