turns added in gameplay

--- a/Hangman/HangmanServer/App.config
+++ b/Hangman/HangmanServer/App.config
@@ -10,7 +10,15 @@
           </baseAddresses>
         </host>
       </service>
-    </services>    
+    </services>
+    <bindings>
+      <netTcpBinding>
+        <binding name="netTcpBinding">
+          <security mode="None" >
+          </security>
+        </binding>
+      </netTcpBinding>
+    </bindings>
     <behaviors>
       <serviceBehaviors>
         <behavior>
