changes during meeting

--- a/Hangman/HangmanClient/HangmanClient.csproj
+++ b/Hangman/HangmanClient/HangmanClient.csproj
@@ -87,7 +87,9 @@
     <None Include="Service References\HangmanContract\Server.wsdl" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
